# bazaar

./: cargo.toml  readme.md
bazaar/: Cargo.toml
database/: Cargo.toml  db.sqlite3  diesel.toml
database/migrations/2025-03-07-005919_patron/: down.sql  up.sql
database/src/: lib.rs  schema.rs
database/src/models/: mod.rs  patron.rs
p2p/: Cargo.toml
p2p/src/: lib.rs
patron/: Cargo.toml
patron/src/: lib.rs
stalls/: Cargo.toml
