[package]
name = "p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.6"
futures = "0.3.31"
libp2p = { version = "0.55.0", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "macros",
    "tcp",
    "yamux",
    "quic",
] }
log = "0.4.26"
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
