[package]
name = "patron"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
libp2p = { version = "0.55.0", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "macros",
    "tcp",
    "yamux",
    "quic",
] }
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

database = {path = "../database"}
p2p = {path = "../p2p"}
env_logger = "0.11.6"
log = "0.4.26"
